gccida/g1/get_attr_imm_disp
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12900:1: error: must use 'enum' tag to refer to type 'attr_imm_disp'
attr_imm_disp  get_attr_imm_disp( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12903:1: error: must use 'enum' tag to refer to type 'attr_imm_disp'
attr_imm_disp result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12913:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12929:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v29; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12943:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12956:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v48 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12960:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 13072, "get_attr_imm_disp"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:12960:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 13072, "get_attr_imm_disp"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13007:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v47 = memory_displacement_operand( recog_data_0.operand[0], VOIDmode); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13010:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return immediate_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13125:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || ( v45 = symbolic_operand( recog_data_0.operand[1], SImode), result = IMM_DISP_FALSE, !v45) ) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13127:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v46 = memory_displacement_operand( recog_data_0.operand[0], VOIDmode); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13130:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return immediate_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13143:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v44 = memory_displacement_operand( recog_data_0.operand[0], VOIDmode); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13146:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return immediate_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13170:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v40 = memory_displacement_operand( recog_data_0.operand[0], VOIDmode); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13173:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return immediate_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13177:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v36 = q_regs_operand( recog_data_0.operand[0], QImode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/insn-attrtab.c:13184:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v38 = memory_displacement_operand( recog_data_0.operand[0], VOIDmode); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_imm_disp/src/obj/insn-attrtab.o] Error 1
